// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Alternate colours 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ dIyPgr"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Success/green button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ bfmHLm"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Danger/red button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ fpaIVQ"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Transparent button for white backgrounds
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Alternate sizes 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ dCHqlE"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Small button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ bDbGuM"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Large button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ fJAQMD"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Specified height button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ iUaOdQ"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      A multiple-line button with specified width
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Default button 1`] = `
<button
  className="sc-AxirZ jsYNIa"
  data-testid={null}
  disabled={false}
>
  Default button
</button>
`;

exports[`Storyshots Components/Button Disabled state 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ cZePCF"
      data-testid={null}
      disabled={true}
    >
      Disabled button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ cZePCF"
      data-testid={null}
      disabled={true}
    >
      Also disabled
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Full width 1`] = `
<button
  className="sc-AxirZ fsPZXF"
  data-testid={null}
  disabled={false}
>
  Full width button
</button>
`;

exports[`Storyshots Components/Button Ghost style 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ gIiRMf"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Small ghost button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ krVGaV"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Regular ghost button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ gxmMFv"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Large ghost button
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Icon only 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ dCHqlE"
      data-testid={null}
      disabled={false}
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ jsYNIa"
      data-testid={null}
      disabled={false}
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ hGgFYH"
      data-testid={null}
      disabled={false}
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Loading state 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ xPAhY"
      data-testid={null}
      disabled={false}
    >
      Loading...
      <span
        className="Icon__IconWrapper-xeqnbo-0 cSOlIO"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ fuLNqp"
      data-testid={null}
      disabled={false}
    >
      Saving...
      <span
        className="Icon__IconWrapper-xeqnbo-0 cSOlIO"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ jjNXvY"
      data-testid={null}
      disabled={false}
    >
      Deleting...
      <span
        className="Icon__IconWrapper-xeqnbo-0 cSOlIO"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button With icon 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ bqzexU"
      data-testid={null}
      disabled={false}
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
      Left aligned icon
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxirZ ffHmaH"
      data-testid={null}
      disabled={false}
    >
      Right aligned icon
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
]
`;
